--- a/font.css
+++ b/font.css
@@ -6,3 +6,11 @@
   font-family: "sandwich-pros";
   src: url("https://s28006.pcdn.co/wp-content/uploads/elementor/custom-icons/pros-icons/font/pros-icons.woff2?97079609");
 }
+@font-face {
+  font-family:"Franklin-bolder" ;
+  src: url("https://s28006.pcdn.co/wp-content/uploads/2025/01/HEX_Franklin_v0.3_Narrow-Extrabold.woff2");
+}
+@font-face {
+  font-family:"Franklin-medium" ;
+  src: url("https://s28006.pcdn.co/wp-content/uploads/2025/01/HEX_Franklin_v0.3-Medium.woff2");
+}
