--- a/responsive.css
+++ b/responsive.css
@@ -4,7 +4,7 @@
 }
 
 /* Medium devices (landscape tablets, 768px and up) */
-@media only screen and (min-width: 767px) {
+@media only screen and (min-width: 768px) {
     .footer-container{
         padding: 0 44px;
     }
@@ -45,6 +45,7 @@
     .support{
         margin-top: 0;
     }
+    
 }
 
 /* Extra large devices (large laptops and desktops, 1200px and up) */
@@ -67,6 +68,9 @@
   .nav-menu {
     display: block;
   }
+  .small-header{
+    display: block;
+  }
 }
 @media only screen and (min-width: 1320px) {
   .item span {
@@ -80,12 +84,22 @@
     font-size: 16px;
   }
   .menu {
-    padding: 0 20px;
+    padding: 0 ;
   }
   .footer-items{
     font-size: 16px;
   }
-  .nav-button{
-    margin: 0 0;
+  #footer-btn{
+    margin-left: auto;
   }
-}
+  .nav-button{
+    margin: 0;
+  }
+  .item-search{
+    padding: 8px 14px 8px 0px;
+  }
+  .small-header-ul{
+    font-size: 11px;
+  }
+
+} 
