--- a/style.css
+++ b/style.css
@@ -5,6 +5,18 @@
 #visibility{
   display: none;
 }
+/* *, *::before, *::after {
+    box-sizing: border-box;
+}
+h1, h2, h3, h4, h5, h6
+ {
+    margin-block-start: 0.5rem;
+    margin-block-end: 1rem;
+    font-family: inherit;
+    font-weight: 500;
+    line-height: 1.2;
+    color: inherit;
+} */
 body {
   font-size: 14px;
   line-height: 21px;
@@ -58,81 +70,66 @@ body {
 .small-header-lang img{
   margin: 0 3px;
 }
-/* .hero{
- 
-} */
-.hero-section-one{
+
+.herobg-section-one{
+  display: none;
   width: 100%;
   background-color: #001828;
   height: auto;
   min-height: 124px;
   padding: 0 42px;
-
-}
-.hero-section-two{
-  padding: 0 42px;
-
 }
 
-.hero-content{
-  position: relative;
-  top: -80px;
+.hero-content-main{
+  /* height: 400px; */
   display: flex;
-  flex-direction:row;
-  padding: 0 42px;
-  border-radius: 7px 7px 0px 0px;
+  flex-direction:column;
+  padding: 0 21px;
   background-color:#01AEFE;
   background-image: url(https://pros.com/wp-content/uploads/2025/05/ai-agent-background.webp);
+ 
+  
 }
-
-.hero-head-title{
-  flex: 1;
+.hero-content-head{
+  margin-top: 30px;
+}
+.hero-content-head h1{
+  font-family: "Franklin-bolder" ;
+  font-size: 50px;
+  line-height: 50px;
+  letter-spacing: -1px;
   color: #FFFFFF;
-  margin:200px 70px 80px 80px;
-  
 }
-
-.hero-head-title h1{
-  font-family:"Franklin-bolder"  ;
-  font-size: 90px;
-  line-height: 78px;
-  letter-spacing: -1.8px;
-  
-}
-.hero-head-title p{
+.hero-content-head h5{
   font-family: "Franklin-Regular";
-  font-size: 24px;
-  line-height: 36px;
-  letter-spacing: -0.84px;
-  margin:1em 0 0.8em;
+  color: #FFFFFF;
+  font-size: 21px;
+  line-height: 28px;
+  letter-spacing: -0.63px;
+  margin-top: 1em;
+  margin-bottom: .8em;
+  font-weight: normal;
 }
-
 .hero-btn{
-  background: radial-gradient(81.91% 100% at 50% 0%, #E6F369 0%, #E6F369 100%);
+  font-family: "Franklin-medium";
   border-radius: 21px;
-  border: none;
+  background:radial-gradient(81.91% 100% at 50% 0%, #E6F369 0%, #E6F369 100%); 
   font-size: 16px;
   line-height: 42px;
-  color: #04314B;
+  letter-spacing: -0.16px;
   padding: 0 21px;
-  font-family: "Franklin-medium";
+  color:#04314B;
+  border: none;
 }
-.hero-image{
-  flex: 1;
-  padding: 0 42px;
-
+.hero-content-iframe{
+  margin: 30px 0;
+  max-width: 100%;
+  width: 100%;
 }
-.hero-image-content{
-  margin-top: 80px;
-
+.hero-content-iframe iframe{
+  width: 100%;
+  height: 300px;
 }
-
-.hero-image-content iframe{
-  height: 560px;
-  width: 538px;
-  /* max-width: 100%; */
-}
-
 .nav-container {
   /* position: fixed; */
   display: flex;
@@ -230,7 +227,7 @@ body {
   max-width: 100%;
 }
 .menu-ul {
-  padding: 0 20px;
+  padding: 0;
   margin: 0;
   display: flex;
   flex-direction: row;
@@ -267,7 +264,7 @@ body {
   gap: 5px;
   align-items: center;
   margin: initial;
-  padding: 8px 9px 8px 0px;
+  padding: 8px 14px 8px 0px;
 }
 .item-search::before {
   content: "";
