--- a/responsive.css
+++ b/responsive.css
@@ -60,6 +60,23 @@
     width: 65%;
     margin: 40px 0 0 0;
   }
+  .services {
+    padding: 30px 30px 50px;
+  }
+
+  .service-btn {
+    width: auto;
+    font-size: 16px;
+    line-height: 38px;
+  }
+  .service-item h2 {
+    font-size: 22px;
+    line-height: 34px;
+  }
+  .service-item p {
+    font-size: 21px;
+  }
+
   /* .hero-content-iframe iframe {
     height: 100%;
     width: 423px;
@@ -108,14 +125,36 @@
     line-height: 34px;
     letter-spacing: -0.84px;
   }
-  .hero-content-main {
-    border-radius: 7px 7px 0px 0px;
+  .section-two-main {
+    border-radius:7px;
     position: relative;
     top: -80px;
   }
   .hero-content-iframe {
     margin-top: 80px;
     padding: 20px;
+  }
+  .services {
+    flex-direction: row;
+    border-radius: 0 0 7px 7px;
+  }
+  .service-item {
+    padding: 0 20px;
+  }
+  .service-item h2 {
+    font-size: 24px;
+    line-height: 28px;
+    letter-spacing: -0.28px;
+  }
+  .service-item p {
+    font-size: 20px;
+    line-height: 36px;
+    letter-spacing: -0.84px;
+  }
+  .border {
+    border-width: 0 1px 0 0;
+    border-style: solid;
+    border-color: #0d9de5;
   }
 }
 
@@ -148,24 +187,23 @@
   .small-header-ul {
     font-size: 11px;
   }
-  .menu-ul{
+  .menu-ul {
     padding: 0 20px;
   }
-  .hero-content-head h1{
+  .hero-content-head h1 {
     font-size: 90px;
     line-height: 78px;
     letter-spacing: -1.8px;
   }
-  .hero-content-head h5{
+  .hero-content-head h5 {
     font-size: 24px;
     line-height: 36px;
     letter-spacing: -0.84px;
-
   }
-    .hero-content-head {
+  .hero-content-head {
     margin: 200px 75px 80px 80px;
   }
-  .hero-content-head{
+  .hero-content-head {
     width: 40%;
   }
 
