--- a/style.css
+++ b/style.css
@@ -2,44 +2,36 @@
   margin: 0;
   box-sizing: border-box;
 }
-#visibility{
+#visibility {
   display: none;
 }
-/* *, *::before, *::after {
-    box-sizing: border-box;
-}
-h1, h2, h3, h4, h5, h6
- {
-    margin-block-start: 0.5rem;
-    margin-block-end: 1rem;
-    font-family: inherit;
-    font-weight: 500;
-    line-height: 1.2;
-    color: inherit;
-} */
+
 body {
   font-size: 14px;
   line-height: 21px;
   letter-spacing: -0.16px;
 }
 .fixed-navbar {
+  position: sticky;
+  top: 0;
+  z-index: 50;
   background-color: #04314b;
   font-family: "Franklin-Regular";
   font-weight: 400;
 }
-.small-header{
+.small-header {
+  background-color: #04314b;
   display: none;
-  padding: 11px 42px 10px ;
-
+  padding: 11px 42px 10px;
 }
-.small-header-content{
+.small-header-content {
   display: flex;
   justify-content: end;
 }
-.small-header-ul{
+.small-header-ul {
   text-transform: uppercase;
   list-style: none;
-  color: #01AEFE;
+  color: #01aefe;
   font-weight: 600;
   padding: 0;
   display: flex;
@@ -50,14 +42,14 @@ body {
   font-size: 10px;
   justify-content: space-between;
 }
-.lang-container{
+.lang-container {
   max-width: 100%;
   width: 120px;
   margin-left: 5px;
 }
-.small-header-lang{
-  color:#0d9de5;
-  
+.small-header-lang {
+  color: #0d9de5;
+
   font-family: "Franklin-Regular";
   text-decoration: none;
   font-size: 11px;
@@ -65,13 +57,12 @@ body {
   font-weight: 600;
   font-size: 14px;
   white-space: nowrap;
-
 }
-.small-header-lang img{
+.small-header-lang img {
   margin: 0 3px;
 }
 
-.herobg-section-one{
+.herobg-section-one {
   display: none;
   width: 100%;
   background-color: #001828;
@@ -79,56 +70,97 @@ body {
   min-height: 124px;
   padding: 0 42px;
 }
-
-.hero-content-main{
+.section-two-main {
+  display: flex;
+  flex-direction: column;
+  background-color: #01aefe;
+  background-image: url(https://pros.com/wp-content/uploads/2025/05/ai-agent-background.webp);
+}
+.hero-content-main {
   /* height: 400px; */
   display: flex;
-  flex-direction:column;
+  flex-direction: column;
   padding: 0 21px;
-  background-color:#01AEFE;
-  background-image: url(https://pros.com/wp-content/uploads/2025/05/ai-agent-background.webp);
- 
-  
 }
-.hero-content-head{
+.hero-content-head {
   margin-top: 30px;
 }
-.hero-content-head h1{
-  font-family: "Franklin-bolder" ;
+.hero-content-head h1 {
+  font-family: "Franklin-bolder";
   font-size: 50px;
   line-height: 50px;
   letter-spacing: -1px;
-  color: #FFFFFF;
+  color: #ffffff;
 }
-.hero-content-head h5{
+.hero-content-head h5 {
   font-family: "Franklin-Regular";
-  color: #FFFFFF;
+  color: #ffffff;
   font-size: 21px;
   line-height: 28px;
   letter-spacing: -0.63px;
   margin-top: 1em;
-  margin-bottom: .8em;
+  margin-bottom: 0.8em;
   font-weight: normal;
 }
-.hero-btn{
+.hero-btn {
   font-family: "Franklin-medium";
   border-radius: 21px;
-  background:radial-gradient(81.91% 100% at 50% 0%, #E6F369 0%, #E6F369 100%); 
+  background: radial-gradient(81.91% 100% at 50% 0%, #e6f369 0%, #e6f369 100%);
   font-size: 16px;
   line-height: 42px;
   letter-spacing: -0.16px;
   padding: 0 21px;
-  color:#04314B;
+  color: #04314b;
   border: none;
 }
-.hero-content-iframe{
+.hero-content-iframe {
   margin: 30px 0;
   max-width: 100%;
   width: 100%;
 }
-.hero-content-iframe iframe{
+.hero-content-iframe iframe {
   width: 100%;
   height: 300px;
+}
+.services {
+  display: flex;
+  flex-direction: column;
+  background-color: #04314b;
+  padding: 42px 21px;
+  text-align: center;
+  gap: 21px;
+}
+.service-item h2 {
+  font-family: "Franklin-bolder";
+  font-size: 28px;
+  color: #ffffff;
+  line-height: 32px;
+  letter-spacing: -0.28px;
+  padding-bottom: 10px;
+}
+.service-item p {
+  color: #ffffff;
+  font-family: "Franklin-Regular";
+  font-size: 21px;
+  /* line-height: 36px; */
+  line-height: 28px;
+  letter-spacing: -0.63px;
+  margin-bottom: 10px;
+  padding-bottom: 12px;
+}
+.service-btn {
+  font-family: "Franklin-medium";
+  border-radius: 21px;
+  background: transparent;
+  font-size: 16px;
+  line-height: 42px;
+  white-space: nowrap;
+  letter-spacing: -0.16px;
+  padding: 0 21px;
+  margin: 0;
+  width: 100%;
+  color: #e6f369;
+  border: 2px solid #e6f369;
 }
 .nav-container {
   /* position: fixed; */
@@ -328,9 +360,8 @@ footer {
   height: auto;
   width: 67px;
 }
-#footer-btn{
-    display: none;
-    
+#footer-btn {
+  display: none;
 }
 
 .footer-content {
@@ -347,9 +378,9 @@ footer {
   padding: 0 42px 42px;
 }
 
-.footer-content-section{
-    display: flex;
-    flex-direction: column;
+.footer-content-section {
+  display: flex;
+  flex-direction: column;
 }
 .list-group {
   margin: 0;
@@ -410,8 +441,3 @@ footer {
   display: inline;
   padding-inline-start: 5px;
 }
-
-
-
-
-
